<resources>
    <string name="app_name">CoronaTracker</string>
    <string name="title_world">World</string>
    <string name="title_marked">Marked</string>
    <string name="title_countries">Countries</string>
    <string name="title_map">Map</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="today_cases">Today cases</string>
    <string name="today_deaths">Today deaths</string>
    <string name="search">Search</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="deaths_per_million">Deaths per million</string>
    <string name="cases_per_million">Cases per million</string>
    <string name="no_connection">No internet connection</string>
    <string name="settings">Settings</string>
    <string name="last_updated">"Last updated:"</string>
    <string name="update_failed">Update failed</string>
    <string name="no_results">No results found</string>

</resources>
