<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_world">

    <fragment
        android:id="@+id/navigation_world"
        android:name="com.terentiev.coronatracker.ui.world.WorldFragment"
        android:label="@string/title_world"
        tools:layout="@layout/fragment_world" />

    <fragment
        android:id="@+id/navigation_marked"
        android:name="com.terentiev.coronatracker.ui.marked.MarkedFragment"
        android:label="@string/title_marked"
        tools:layout="@layout/fragment_marked" />

    <fragment
        android:id="@+id/navigation_countries"
        android:name="com.terentiev.coronatracker.ui.countries.CountriesFragment"
        android:label="@string/title_countries"
        tools:layout="@layout/fragment_countries" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.terentiev.coronatracker.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />
</navigation>
