<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_worldwide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:drawableEnd="@drawable/ic_globe_gray_24dp"
        android:gravity="center"
        android:text="@string/title_world"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ww_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center"
                android:text="@string/cases" />

            <TextView
                android:id="@+id/tv_ww_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center"
                android:text="@string/deaths" />

            <TextView
                android:id="@+id/tv_ww_recovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/recovered" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ww_cases_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="500000" />

            <TextView
                android:id="@+id/tv_ww_deaths_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="30000" />

            <TextView
                android:id="@+id/tv_ww_recovered_num"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="132441" />
        </TableRow>

    </TableLayout>
</LinearLayout>