<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="#1" />

                <TextView
                    android:id="@+id/tv_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="start"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Ukraine" />

                <ImageView
                    android:id="@+id/iv_flag"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:cropToPadding="false"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@drawable/ua" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:text="@string/cases" />

                <TextView
                    android:id="@+id/tv_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:text="@string/deaths" />

                <TextView
                    android:id="@+id/tv_today_cases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/today_cases" />

                <TextView
                    android:id="@+id/tv_today_deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/today_deaths" />

                <TextView
                    android:id="@+id/tv_recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:singleLine="false"
                    android:text="@string/recovered" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_cases_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="3000" />

                <TextView
                    android:id="@+id/tv_deaths_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="50" />

                <TextView
                    android:id="@+id/tv_today_cases_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="3" />

                <TextView
                    android:id="@+id/tv_today_deaths_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="1" />

                <TextView
                    android:id="@+id/tv_recovered_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="1" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
